tests/error/decl_res.gw
// [contains] ... in variable declaration
 int now;
